# kanjistory_api

./: .gitignore  README.md  pyproject.toml  template.env
kanjistory_api/: __init__.py  api.py  settings.py
kanjistory_api/story/: models.py  resources.py  schemas.py
